# MCDenis

./: package-lock.json  package.json
Backend/aplicacion_ventas/: .pre-commit-config.yaml  README.md  env.sample  pyproject.toml
Backend/aplicacion_ventas/src/: app.py  create_superuser.py
Backend/aplicacion_ventas/src/alembic/: env.py
Backend/aplicacion_ventas/src/alembic/versions/: 033f70571cc3_added_account_tablea.py  511eddd1f4e2_added_workers_tables.py
Backend/aplicacion_ventas/src/general/: auth.py  ormbase.py
Backend/aplicacion_ventas/src/users/: app.py
Backend/aplicacion_ventas/src/users/api/: api.py
Backend/aplicacion_ventas/src/users/models/: users.py
Backend/aplicacion_ventas/src/users/schemas/: user_input.py  user_output.py
Backend/aplicacion_ventas/src/users/test/: user_test.py
Backend/aplicacion_ventas/src/workers/: app.py
Backend/aplicacion_ventas/src/workers/api/: api.py
Backend/aplicacion_ventas/src/workers/models/: workers.py
Backend/aplicacion_ventas/src/workers/schemas/: workers_input.py  workers_output.py
Backend/aplicacion_ventas/src/workers/test/: worker_test.py
FrontEnd/: package-lock.json
FrontEnd/src/router/: router.js
Fronted/: package.json
Fronted/public/: index.html
Fronted/src/: index.js
Fronted/src/components/: card.jsx  dropDownMenu.jsx  grid.jsx  header.jsx
Fronted/src/modules/home/: home.js
Fronted/src/modules/splash/: splash.js
Fronted/src/router/: router.js
Fronted/src/store/: store.js
Fronted/src/store/auth/: authSlice.js
Fronted/src/styles/: generic.css  normalize.css
Fronted/src/styles/components/: card.css  dropDownMenu.css  grid.css  header.css
Fronted/src/styles/modules/: home.css
src/: index.js
src/router/: router.js
(+3 files in other folders)
