[tool.poetry]
name = "aplicacion_ventas"
version = "0.1.0"
description = "Aplicación de ventas"
authors = ["Pablo Estevez < pablo22estevez@gmail.com >"]


[tool.mypy]
plugins = ["pydantic.mypy", "sqlmypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = '/test/'

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.2.0"
pydantic = "^1.9.0"
fastapi = "^0.99.1"
mypy = "^1.5.1"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.20"
sqlalchemy2-stubs = "^0.0.2a35"
sqlalchemy-utils = "^0.41.1"
mypy-extensions = "^1.0.0"
sqlalchemy-stubs = "^0.4"
fastapi-auth-middleware = "^1.0.2"
pyjwt = "^2.8.0"
uvicorn = "^0.23.2"
bcrypt = "^4.0.1"
cryptography = "^41.0.3"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
mock = "^5.1.0"

[tool.ruff]
line-length = 120
fix = true
fixable = ["E", "F", "I", "COM812"]
show-source = true

select = ["E","F","COM", "PLC", "PLE", "PLW", "ERA", "T201"]

exclude = [
    "*/migrations/*", "*/alembic/*", "*/.venv/*", "*/.git/*", "*/.tox/*", "*/.mypy_cache/*", "*/.pytest_cache/*", "*/.vscode/*", "*/.github/*", "*/.ruff/*"]

target-version = "py310"